--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -803,7 +803,7 @@ footer .sponsors a {
 }
 
 #googlemap {
-	background: url(../images_dummy/gmap_dummy.jpg) no-repeat center;
+	/*background: url(../images_dummy/gmap_dummy.jpg) no-repeat center;*/
 	height: 530px;
 }
 
