--- a/app/views/home.html
+++ b/app/views/home.html
@@ -65,9 +65,9 @@
                 <img src="images/home_about_map.png" alt="map" class="map" />
             </div>
             <div class="col7 push1 content">
-                <h2>3600 visitors to be expected</h2>
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum.</p>
-                <a href="#" class="btn">Buy tickets</a>
+                <h2>3450 visitors to be expected</h2>
+                <p>The biggest Java community conference in the world has opened the call for papers, help us shape another crazy gathering!</p>
+                <!--<a href="#" class="btn">Buy tickets</a>-->
             </div>
         </div>
     </div>
@@ -81,10 +81,9 @@
             <li>
                 <a href="#">
                     <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
+                    <div class="date">29 May '13</div>
+                    <h4>Call For Papers Open</h4>
+                    <p>The Devoxx Belgium Call for Papers is now open until July 6th.  Please login and submit your proposals.</p>
                 </a>
             </li>
             <li>
@@ -121,33 +120,6 @@
                     <h4>Here comes news title</h4>
                     <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
                         Fusce dapibus.</p>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
                     <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
                         Fusce dapibus.</p>
                 </a>
