Venue and About refactored

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,18 +1,59 @@
-<div ng-controller="AboutCtrl">
-    <h3>About Devoxx CFP</h3>
-    <p>
-        Programmed by:
-        <ul class="plain">
-            <li><a href="http://www.twitter.com/jankeesvanandel">Jan-Kees van Andel (@jankeesvanandel)</a></li>
-            <li><a href="http://www.twitter.com/jovoordeckers">Jo Voordeckers (@jovoordeckers)</a></li>
-        </ul>
-        Contributors:
-        <ul class="plain">
-            <li><a href="http://www.twitter.com/ndeloof">Nicolas De Loof (@ndeloof)</a></li>
-        </ul>
-        Gracefully hosted by CloudBees Platform
-        <a href="http://www.cloudbees.com">
-            <img src="http://www.cloudbees.com/sites/default/files/Button-Powered-by-CB.png" alt="Powered by CloudBees" border="0"/>
-        </a>
-</p>
+
+<div id="topinfo" class="area orange">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col9">
+
+                <h1>About</h1>
+                <h3>Devoxx CFP</h3>
+
+            </div>
+            <div class="col11">
+
+                <a href="https://github.com/devoxx">
+                    <img src="../../images/github.png" class="visual" alt="" />
+                </a>
+
+            </div>
+        </div>
+
+    </div>
 </div>
+
+<div id="hotel-bars" class="area lightgrey" ng-controller="AboutCtrl">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col8">
+
+                <h4>Programmed by</h4>
+
+                <ul class="linkList">
+                    <li><a href="http://www.twitter.com/cyril_lakech">Cyril Lakech</a> (@cyril_lakech)</li>
+                    <li><a href="http://www.twitter.com/jankeesvanandel">Jan-Kees van Andel</a> (@jankeesvanandel)</li>
+                    <li><a href="http://www.twitter.com/jovoordeckers">Jo Voordeckers</a> (@jovoordeckers)</li>
+                    <li><a href="http://www.twitter.com/mikeseghers">Michael Seghers</a> (@mikeseghers)</li>
+                    <li><a href="http://www.twitter.com/stephan007">Stephan Janssen</a> (@stephan007)</li>
+                </ul>
+
+            </div>
+            <div class="col12">
+
+                <h4>Contributors</h4>
+
+                <ul class="linkList">
+                    <li><a href="http://www.twitter.com/ndeloof">Nicolas De Loof</a> (@ndeloof)</li>
+                </ul>
+
+                <h4>Gracefully hosted by CloudBees Platform</h4>
+                <a href="http://www.cloudbees.com">
+                    <img src="http://www.cloudbees.com/sites/default/files/Button-Powered-by-CB.png" alt="Powered by CloudBees" border="0"/>
+                </a>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
