More static content

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -55,18 +55,18 @@
         <div class="row">
             <div class="col12">
                 <div class="counter" id="counterSpeakers">
-                    <div class="amount">172</div>
+                    <div class="amount">195</div>
                     <div class="description">Speakers</div>
                 </div>
                 <div class="counter" id="counterTalks">
                     <div class="amount">200</div>
-                    <div class="description">Talks</div>
+                    <div class="description">Presentations</div>
                 </div>
                 <img src="images/home_about_map.png" alt="map" class="map" />
             </div>
             <div class="col7 push1 content">
                 <h2>3450 visitors to be expected</h2>
-                <p>The biggest Java community conference in the world has opened the call for papers, help us shape another crazy gathering!</p>
+                <p>The biggest Java community conference in the world has opened the call for papers, help us shape another crazy geek gathering!</p>
                 <!--<a href="#" class="btn">Buy tickets</a>-->
             </div>
         </div>
@@ -79,198 +79,53 @@
     <div class="carousel">
         <ul class="newsList clearfix" news>
             <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
+                <a href="#about">
+                    <img src="images/newSite.png" alt="" />
                     <div class="date">29 May '13</div>
-                    <h4>Call For Papers Open</h4>
-                    <p>The Devoxx Belgium Call for Papers is now open until July 6th.  Please login and submit your proposals.</p>
+                    <h4>New site</h4>
+                    <p>Hope you like our brand new website?</br>The CFP part has also been redeveloped using AngularJS and is open sourced on GitHub/devoxx.
+                       Yes we welcome pull requests with any king of improvements!</br>Click here fore more info about our team</p>
                 </a>
             </li>
             <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
-                </a>
+
+                    <img src="images/DevoxxCallForPapers.png" alt="Call For Papers" />
+                    <div class="date">29 May '13</div>
+                    <h4>Call For Papers Now Open</h4>
+                    <p>The CFP for Devoxx Belgium 2013 is now open and closes on July 6th.
+                        </br>Please login and submit your proposals and help us shape another awesome conference.</p>
+
             </li>
             <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
-                </a>
+                <!--<a href="#">-->
+                    <img src="images/born2Be.png" alt="Born To Be" />
+                    <div class="date">29 May '13</div>
+                    <h4>New Devoxx Theme</h4>
+                    <p>The majority of the Devoxxians are "Born to be..." a developer and many tell us they actually feel reborn after attending Devoxx.  :)</p>
+                <!--</a>-->
             </li>
             <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
-                </a>
+                <!--<a href="#">-->
+                    <img src="images/registration.png" alt="Devoxx Registrations" />
+                    <div class="date">29 May '13</div>
+                    <h4>Registrations Open Soon</h4>
+                    <p>As always we under-estimated the work for our new website including the redeveloped of the CFP proposals module.
+                        As a result the Devoxx registrations will open a bit later, our aim is end of June.</p>
+                <!--</a>-->
             </li>
             <li>
-                <a href="#">
-                    <img src="images_dummy/news_dummy.jpg" alt="" />
-                    <div class="date">15 june '13</div>
-                    <h4>Here comes news title</h4>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
-                    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.
-                        Fusce dapibus.</p>
+                <a href="#team">
+                <img src="images/devoxxTeam.png" alt="The Devoxx BE team" />
+                <div class="date">29 May '13</div>
+                <h4>The Devoxx Team</h4>
+                <p>The international Devoxx team has already been working hard behind the scenes.
+                   Our batteries are again fully charged to organise a great Devoxx experience for you!
+                </p>
                 </a>
             </li>
+
         </ul>
     </div>
 
 </div>
-
-
-
-<div id="tracks" class="area orange">
-    <div class="grid">
-
-        <div class="row">
-            <div class="col20">
-
-                <h2>Tracks <span>2013</span></h2>
-                <ul class="dotList" id="trackList">
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo. </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="icon">
-                            <img src="images_dummy/icon_dummy.png" alt="Trackname" />
-                        </div>
-                        <h4>Name comes here</h4>
-                        <div class="popup">
-                            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus ac cursus commodo.</p>
-                        </div>
-                    </li>
-                </ul>
-
-            </div>
-        </div>
-
-    </div>
-</div>
-
-
-
-<div id="tweetwall" class="area lightgrey">
-    <div class="grid">
-
-        <div class="row">
-            <div class="col10">
-
-                <h2>What’s up? <span>#DEVOXX</span></h2>
-
-            </div>
-            <div class="col10 apps">
-
-                <h4>Download the app and interact!</h4>
-                <a href="#" class="btn googleStore"></a>
-                <a href="#" class="btn appStore"></a>
-
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col20">
-
-                <div class="carousel" ng-controller="TwitterCtrl">
-
-                    <ul tweetwall>
-                        <li ng-repeat="tweet in tweets" ng-class-even="'even'">
-                            <img class="visual" ng-src="{{tweet.thumbnail}}">
-                            <div class="tweet">
-                                <p>{{tweet.tweet}}</p>
-                                <div class="info">
-                                    <a href="#">{{tweet.handle}}</a> , {{tweet.time}} on Twitter
-                                </div>
-                                <span class="ballon"></span>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
-
-    </div>
-</div>
-
 
