- More sponsor images - Added more static text

--- a/app/views/practical/faq.html
+++ b/app/views/practical/faq.html
@@ -2,16 +2,13 @@
     <div class="grid">
 
         <div class="row">
-            <div class="col9">
+            <div class="col16">
 
-                <h1>FAQ</h1>
-            </div>
-            <div class="col11">
-
-                <img src="../../images/topinfo_location_visual.jpg" class="visual" alt="" />
-
+                <h1>Frequently Asked Questions</h1>
+                <h3>Edition 2013</h3>
             </div>
         </div>
 
     </div>
 </div>
+
