--- a/app/views/practical/team.html
+++ b/app/views/practical/team.html
@@ -2,15 +2,40 @@
     <div class="grid">
 
         <div class="row">
-            <div class="col9">
+            <div class="col16">
 
-                <h1>Team</h1>
+                <h1>The Devoxx Team</h1>
+                <h3>Edition 2013</h3>
             </div>
-            <div class="col11">
+        </div>
 
-                <img src="../../images/topinfo_location_visual.jpg" class="visual" alt="" />
+    </div>
+</div>
 
+
+<div id="groups" class="area blue">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col1 push1">
+
+                <h4>Steering</h4>
             </div>
+            <div class="col1 push1">
+
+                <h4>Program</h4>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<div id="members" class="area lightgrey">
+    <div class="grid">
+
+        <div class="row">
+
         </div>
 
     </div>
