--- a/app/views/speaker/proposals.html
+++ b/app/views/speaker/proposals.html
@@ -1,4 +1,4 @@
-<div id="paper_form" class="area lightgrey" ng-controller="Speaker_GlobalCtrl">
+<div id="paper_form" class="area lightgrey">
     <div class="grid">
 
         <div class="row">
