--- a/app/styles/uniform.css
+++ b/app/styles/uniform.css
@@ -11,9 +11,69 @@ form ul li > label {
 	display: inline;
 	float: left;
 	margin: 0 0 0 -150px;
-	padding: 13px 0;
+	padding: 22px 0 0 0;
 	text-transform: uppercase;
 	width: 140px;
+	font-family: "GothamBook","Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;
+}
+form ul li.btn input {
+	background: none repeat scroll 0 0 #F5AF33;
+	border: medium none;
+	border-radius: 6px 6px 6px 6px;
+	color: #FFFFFF;
+	display: inline-block;
+	font: bold 12px/13px "GothamBook","Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;
+	padding: 20px 0;
+	text-transform: uppercase;
+	width: 100%;
+}
+form ul li.btn input:hover {
+	background: #000;
+	color: #fff;
+}
+
+form ul li ul.checkradios li {
+	margin: 0 0 3px 0;
+	padding: 0;
+}
+form ul li ul.checkradios li label {
+	margin: 0;
+	padding: 10px 0 0 0;
+	width: 180px;
+}
+
+
+
+
+
+/* General settings */
+div.selector, div.selector span {
+	background-image: url("../images/forms.png");
+	background-repeat: no-repeat;
+	-webkit-font-smoothing: antialiased;
+}
+div.selector, div.checker, div.button, div.radio, div.uploader {
+	display: -moz-inline-box;
+	display: inline-block;
+	*display: inline;
+	zoom: 1;
+	vertical-align: middle;
+	/* Keeping this as :focus to remove browser styles */
+}
+div.selector:focus, div.checker:focus, div.button:focus, div.radio:focus, div.uploader:focus {
+	outline: 0;
+}
+div.selector, div.selector *, div.radio, div.radio *, div.checker, div.checker *, div.uploader, div.uploader *, div.button, div.button * {
+	margin: 0;
+	padding: 0;
+}
+/* Remove default webkit and possible mozilla .search styles.
+ * Keeping this as :active to remove browser styles */
+div.checker input,
+input[type="search"],
+input[type="search"]:active {
+	-moz-appearance: none;
+	-webkit-appearance: none;
 }
 
 
@@ -33,7 +93,7 @@ textarea.uniform {
 	padding: 23px 25px;
 	-webkit-border-radius: 5px;	    
     border-radius: 5px;
-    width: 70%;
+    width: 85%;
     -webkit-box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
     box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
 }
@@ -47,37 +107,6 @@ textarea.uniform.focus {
 
 
 
-
-/* General settings */
-div.selector, div.selector span, div.checker span, div.radio span, div.uploader, div.uploader span.action, div.button, div.button span {
-  background-image: url("../images/forms.png");
-  background-repeat: no-repeat;
-  -webkit-font-smoothing: antialiased; }
-div.selector, div.checker, div.button, div.radio, div.uploader {
-  display: -moz-inline-box;
-  display: inline-block;
-  *display: inline;
-  zoom: 1;
-  vertical-align: middle;
-  /* Keeping this as :focus to remove browser styles */ }
-  div.selector:focus, div.checker:focus, div.button:focus, div.radio:focus, div.uploader:focus {
-    outline: 0; }
-div.selector, div.selector *, div.radio, div.radio *, div.checker, div.checker *, div.uploader, div.uploader *, div.button, div.button * {
-  margin: 0;
-  padding: 0; }
-  
-  
-
-
-
-/* Remove default webkit and possible mozilla .search styles.
- * Keeping this as :active to remove browser styles */
-div.checker input,
-input[type="search"],
-input[type="search"]:active {
-	-moz-appearance: none;
-	-webkit-appearance: none;
-}
 
 /* Select */
 div.selector {
@@ -100,7 +129,7 @@ div.selector span {
 	background-position: right -140px;
 	height: 65px;
 	line-height: 63px;
-	padding: 0 40px 0 15px;
+	padding: 0 50px 0 15px;
 	cursor: pointer;
 	width: 100%;
 	display: block;
@@ -128,90 +157,101 @@ div.selector.focus span {
 	background-position: right -210px;
 }
 
+
 /* Checkbox */
 div.checker {
-  position: relative; }
-  div.checker, div.checker span, div.checker input {
-    width: 19px;
-    height: 19px; }
-  div.checker span {
-    display: -moz-inline-box;
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-    text-align: center;
-    background-position: 0 -260px; }
-    div.checker span.checked {
-      background-position: -76px -260px; }
-  div.checker input {
-    opacity: 0;
-    filter: alpha(opacity=0);
-    -moz-opacity: 0;
-    border: none;
-    background: none;
-    display: -moz-inline-box;
-    display: inline-block;
-    *display: inline;
-    zoom: 1; }
-  div.checker.active span {
-    background-position: -19px -260px; }
-    div.checker.active span.checked {
-      background-position: -95px -260px; }
-  div.checker.hover span, div.checker.focus span {
-    background-position: -38px -260px; }
-    div.checker.hover span.checked, div.checker.focus span.checked {
-      background-position: -114px -260px; }
-  div.checker.hover.active span, div.checker.focus.active span {
-    background-position: -57px -260px; }
-    div.checker.hover.active span.checked, div.checker.focus.active span.checked {
-      background-position: -133px -260px; }
-  div.checker.disabled, div.checker.disabled.active {
-    background-position: -152px -260px; }
-    div.checker.disabled span.checked, div.checker.disabled.active span.checked {
-      background-position: -171px -260px; }
+	background: #fff;
+	position: relative;
+	border: none;
+	margin: -2px 5px 0 0;
+	-webkit-border-radius: 4px;	    
+	border-radius: 4px;
+	-webkit-box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
+	box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
+}
+div.checker, div.checker span, div.checker input {
+	width: 26px;
+	height: 26px;
+}
+div.checker span {
+	display: -moz-inline-box;
+	display: inline-block;
+	*display: inline;
+	zoom: 1;
+	text-align: center;
+	width: 14px;
+	height: 14px;
+	margin: 6px;
+	-webkit-border-radius: 3px;	    
+	border-radius: 3px;
+}
+div.checker span.checked {
+	background: #F5AF33;
+}
+div.checker input {
+	opacity: 0;
+	filter: alpha(opacity=0);
+	-moz-opacity: 0;
+	border: none;
+	background: none;
+	display: -moz-inline-box;
+	display: inline-block;
+	*display: inline;
+	zoom: 1;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+
 
 /* Radio */
 div.radio {
-  position: relative; }
-  div.radio, div.radio span, div.radio input {
-    width: 18px;
-    height: 18px; }
-  div.radio span {
-    display: -moz-inline-box;
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-    text-align: center;
-    background-position: 0 -279px; }
-    div.radio span.checked {
-      background-position: -72px -279px; }
-  div.radio input {
-    opacity: 0;
-    filter: alpha(opacity=0);
-    -moz-opacity: 0;
-    border: none;
-    background: none;
-    display: -moz-inline-box;
-    display: inline-block;
-    *display: inline;
-    zoom: 1;
-    text-align: center; }
-  div.radio.active span {
-    background-position: -18px -18px -279px; }
-    div.radio.active span.checked {
-      background-position: -90px -279px; }
-  div.radio.hover span, div.radio.focus span {
-    background-position: -36px -36px -279px; }
-    div.radio.hover span.checked, div.radio.focus span.checked {
-      background-position: -108px -279px; }
-  div.radio.hover.active span, div.radio.focus.active span {
-    background-position: -54px -279px; }
-    div.radio.hover.active span.checked, div.radio.focus.active span.checked {
-      background-position: -126px -279px; }
-  div.radio.disabled span, div.radio.disabled.active span {
-    background-position: -144px -279px; }
-    div.radio.disabled span.checked, div.radio.disabled.active span.checked {
-      background-position: -162px -279px; }
+	background: #fff;
+	position: relative;
+	border: none;
+	margin: -2px 5px 0 0;
+	-webkit-border-radius: 4px;	    
+	border-radius: 4px;
+	-webkit-box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
+	box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
+}
+div.radio, div.radio span, div.radio input {
+	width: 26px;
+	height: 26px;
+}
+div.radio span {
+	display: -moz-inline-box;
+	display: inline-block;
+	*display: inline;
+	zoom: 1;
+	text-align: center;
+	width: 14px;
+	height: 14px;
+	margin: 6px;
+	-webkit-border-radius: 3px;	    
+	border-radius: 3px;
+}
+div.radio span.checked {
+	background: #F5AF33;
+}
+div.radio input {
+	opacity: 0;
+	filter: alpha(opacity=0);
+	-moz-opacity: 0;
+	border: none;
+	background: none;
+	display: -moz-inline-box;
+	display: inline-block;
+	*display: inline;
+	zoom: 1;
+	text-align: center;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+
 
 /* Uploader */
 div.uploader {
@@ -221,10 +261,10 @@ div.uploader {
 	font-weight: normal;
 	color: #777;
 	border: none;
-	padding: 10px;
+	padding: 10px 40px 10px 10px;
 	-webkit-border-radius: 5px;	    
 	border-radius: 5px;
-	width: 74%;
+	width: 85%;
 	-webkit-box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
 	box-shadow: inset 1px 1px 2px 0px rgba(0, 0, 0, 0.4);
 	cursor: pointer;
@@ -235,7 +275,6 @@ div.uploader span.action {
 	background-position: right -409px;
 	height: 28px;
 	line-height: 28px;
-	width: 82px;
 	text-align: center;
 	float: left;
 	display: inline;
@@ -245,10 +284,11 @@ div.uploader span.action {
 	color: #fff;
 	display: inline-block;
 	white-space: nowrap;
-	padding: 13px 30px;
+	padding: 13px 20px;
 	text-transform: uppercase;
 	-webkit-border-radius: 6px;
 	border-radius: 6px;
+	font-family: "GothamBook","Helvetica Neue",Arial,Helvetica,Geneva,sans-serif;
 }
 div.uploader.hover span.action {
 	background: #F5AF33;
@@ -283,18 +323,7 @@ div.uploader input {
 	height: 100%;
 }
 
-      
 
-/* PRESENTATION */
-div.button span {
-	font-weight: bold;
-	font-family: "Lucida Grande", Lucida, Verdana, sans-serif;
-	font-size: 14px;
-	text-transform: uppercase;
-}
-div.button.hover span, div.button.focus span {
-}
-div.button.disabled span, div.button.disabled.active span {
-}
+
 
 
