Redesigned some CFP pages

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -108,8 +108,8 @@
                     <img src="images/news/registration.png" alt="Devoxx Registrations" />
                     <div class="date">29 May '13</div>
                     <h4>Registrations Open Soon</h4>
-                    <p>As always we under-estimated the work for our new website including the redeveloped of the CFP proposals module.
-                        As a result the Devoxx registrations will open a bit later, our aim is end of June.</p>
+                    <p>As always we under-estimated the work for our new website including the redevelopment of the CFP proposals module.
+                       As a result the Devoxx registrations will open a bit later, our target is end of June.</p>
                 <!--</a>-->
             </li>
             <li>
