--- a/app/views/logged_out.html
+++ b/app/views/logged_out.html
@@ -1,8 +1,24 @@
+<div id="topinfo" class="area orange">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col16">
+
+                <h1>Logged out</h1>
+                <h3>Thanks for using our CFP</h3>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <div id="paper_form" class="area lightgrey" ng-controller="Speaker_GlobalCtrl">
-    <div>
-        <p>
-            You are successfully logged out.
-            Click <a href="/">here</a> to return to the home page.
-        </p>
+    <div class="grid">
+        <div class="row">
+            <p>Want to know how this web site was developed OR you want to improve some features?
+            Then please visit our <a href="#about">team page</a>.</p>
+
+            <p>Click <a href="/">here</a> to return to the home page.</p>
+        </div>
     </div>
 </div>
