--- a/app/views/speaker/proposal.html
+++ b/app/views/speaker/proposal.html
@@ -1,5 +1,17 @@
-<div ng-controller="Speaker_ProposalDetailsCtrl">
-    <h3>Proposal Details</h3>
+<div id="topinfo" class="area orange">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col16">
+
+                <h1>Proposal Details</h1>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div ng-controller="Speaker_ProposalDetailsCtrl" class="area lightgrey">
     <dl>
         <dt>ID</dt>
         <dd>{{model.talk.id}}</dd>
