--- a/app/views/speaker/proposal_form.html
+++ b/app/views/speaker/proposal_form.html
@@ -1,15 +1,14 @@
-<div id="topinfo" class="area blue" style="display: none">
+<div id="topinfo" class="area blue">
     <div class="grid">
         <div class="row">
-            <div class="col9">
-                <h1>last call for papers</h1>
-
-                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Vivamus sagittis.
-                    laoreet rutrum faucibus dolor auctor
-                    Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. </p>
-            </div>
             <div class="col11">
-                <img src="images_dummy/slide_02.png" class="visual" alt=""/>
+                <h1>Call For Papers</h1>
+
+                <h3>Thx for shaping Devoxx</h3>
+            </div>
+
+            <div class="col6">
+                <img src="images/proposal_icon.png" class="visual" alt=""/>
             </div>
         </div>
     </div>
@@ -129,7 +128,7 @@
                             </li>
 
                             <li>
-                                <label for="talkExtraInfo">Message to steering committee (optional)</label>
+                                <label for="talkExtraInfo">Message to program committee (optional)</label>
                                 <textarea id="talkExtraInfo" ng-model="model.talk.extraInfo" devoxx-uniform></textarea>
                             </li>
 
