--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,15 +1,30 @@
+<div id="topinfo" class="area orange">
+    <div class="grid">
 
-<div ng-controller="ProfileCtrl">
+        <div class="row">
+            <div class="col16">
+
+                <h1>Profile</h1>
+                <h3>Your Devoxxian profile</h3>
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div ng-controller="ProfileCtrl" class="area lightgrey">
     <div>
-        <h3>Profile</h3>
         <p ng-hide="profileComplete()">Your profile is not yet complete. To continue, please fill in the missing values in the form below</p>
         <form>
-            <ng-include src="'views/speaker/speaker_details.html'"></ng-include>
-            </br>
-            <input type="submit"
-                   ng-click="updateProfile()"
-                   class="btn"
-                   value="Update profile">
+            <div class="grid">
+                <ng-include src="'views/speaker/speaker_details.html'"></ng-include>
+                </br>
+                <input type="submit"
+                       class="btn"
+                       ng-click="updateProfile()"
+                       value="Update">
+            </div>
         </form>
     </div>
 </div>
