--- a/app/views/speaker/proposals.html
+++ b/app/views/speaker/proposals.html
@@ -1,21 +1,53 @@
+<div id="topinfo" class="area orange">
+    <div class="grid">
+
+        <div class="row">
+            <div class="col12">
+
+                <h1>Proposals</h1>
+                <h3>Your Devoxx Experiences</h3>
+            </div>
+
+            <div class="col6">
+
+                <img src="../../images/proposal_icon.png" class="visual" alt="" />
+
+            </div>
+        </div>
+
+    </div>
+</div>
+
+
+<div id="adresse" class="area blue">
+    <div class="grid">
+        <div class="row">
+            <div class="col6">
+                <h4>Submit New Proposal</h4>
+            </div>
+            <div class="col6">
+                <div ng-controller="Speaker_ProposalsCtrl" ng-cloak>
+                    <a href="#/speaker/proposal/new" class="btn btn-primary">New</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="paper_form" class="area lightgrey">
     <div class="grid">
 
         <div class="row">
             <div class="col20">
-                <h4>Submit Proposal</h4>
-
+                <h4>Existing Proposals</h4>
                 <div ng-controller="Speaker_ProposalsCtrl" ng-cloak>
-                    <h3>My Proposals</h3>
-                    <a href="#/speaker/proposal/new" class="btn btn-primary">New</a>
-                    <hr>
                     <h4 ng-show="!model.myProposals">Loading...</h4>
                     <h4 ng-show="model.myProposals.length == 0">No proposals</h4>
                     <table class="table" ng-show="model.myProposals.length > 0">
                         <thead>
                             <tr>
                                 <th class="col1">Title</th>
-                                <th class="col2">State</th>
+                                <th class="col2">Status</th>
                                 <th class="col3"></th>
                             </tr>
                         </thead>
