- Removed temp Google map - Added EU buttons

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -24,7 +24,7 @@
 <div id="hotel-bars" class="area lightgrey" ng-controller="AboutCtrl">
     <div class="grid">
         <p>We've open sourced the Devoxx Call For Papers client side modules, just click on the above header image to see the related github repo's.</p>
-        <p>Improvements are always welcome. Lets us know if you've a 'pull request' for us and we'll add you as a contributor!</p>
+        <p>Improvements are always welcome. Lets us know if you've a 'pull request' and we'll add you as a contributor!</p>
 
         <div class="row">
             <div class="col8">
