--- a/app/views/home.html
+++ b/app/views/home.html
@@ -61,7 +61,12 @@
                     <div class="amount">200</div>
                     <div class="description">Presentations</div>
                 </div>
-                <img src="images/home_about_map.png" alt="map" class="map" />
+                <div class="map">
+                    <img src="images/home_about_map.png" alt="map" />
+                    <a href="#home" class="btn_be"><span>Belgium</span></a>
+                    <a href="http://www.devoxx.com/display/FR13/Accueil" class="btn_fr"><span>France</span></a>
+                    <a href="http://www.devoxx.com/display/UK13/Home" class="btn_uk"><span>United Kingdom</span></a>
+                </div>
             </div>
             <div class="col7 push1 content">
                 <h2>3450 visitors to be expected</h2>
