--- a/app/views/logged_out.html
+++ b/app/views/logged_out.html
@@ -1,4 +1,4 @@
-<div id="paper_form" class="area lightgrey" ng-controller="Speaker_GlobalCtrl">
+<div id="paper_form" class="area lightgrey">
     <div>
         <p>
             You are successfully logged out.
