--- a/app/views/logged_out.html
+++ b/app/views/logged_out.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div id="paper_form" class="area lightgrey" ng-controller="Speaker_GlobalCtrl">
+<div id="paper_form" class="area lightgrey">
     <div class="grid">
         <div class="row">
             <p>Want to know how this web site was developed OR you want to improve some features?
