- Removed unused static pages - Updated some more text

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -69,8 +69,8 @@
                 </div>
             </div>
             <div class="col7 push1 content">
-                <h2>3450 visitors to be expected</h2>
-                <p>The biggest Java community conference in the world has opened the call for papers, help us shape another crazy geek gathering!</p>
+                <h2>Belgium expects 3450 Devoxxians</h2>
+                <p>The biggest Java community conference (5500 attendees combined) has opened the Call for Papers for the Devoxx Belgium edition, help us shape another crazy geek gathering!</p>
                 <!--<a href="#" class="btn">Buy tickets</a>-->
             </div>
         </div>
