--- a/app/views/logged_out.html
+++ b/app/views/logged_out.html
@@ -16,7 +16,7 @@
     <div class="grid">
         <div class="row">
             <p>Want to know how this web site was developed OR you want to improve some features?
-            Then please visit our <a href="#about">team page</a>.</p>
+            Then please visit our <a href="#about">about page</a>.</p>
 
             <p>Click <a href="/">here</a> to return to the home page.</p>
         </div>
